Dark Mode fix

--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -52,7 +52,15 @@ table {
     border-spacing: 0
 }
 
-
+input,
+textarea,
+select {
+    color: var(--accent-1);
+    background-color: var(--background-color);
+}
+svg{
+    fill: var(--accent-1);
+}
 
 //navbar setup
 .main {
@@ -91,7 +99,8 @@ table {
 }
 
 .btn {
-    border: 1px solid rgb(225, 225, 225);
+    user-select: none;
+    border: var(--border-default);
     font-size: 14px;
     cursor: pointer;
     font-weight: 500;
@@ -104,5 +113,5 @@ table {
 }
 
 .btn:hover {
-    background-color: rgb(245, 245, 245);
+    background-color: var(--component-color);
 }
